# lazycat

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_char.cpp  benchmark_char_cat.cpp  benchmark_i32_cat.cpp  benchmark_string.cpp  benchmark_string_append_norealloc.cpp  benchmark_string_append_realloc.cpp  benchmark_string_cat.cpp
src/: CMakeLists.txt
src/lazycat/: lazycat.hpp  lazycat_bool.hpp  lazycat_core.hpp  lazycat_floating_point.hpp  lazycat_integral.hpp  util.hpp
test/: CMakeLists.txt  bool_test.cpp  floating_point_test.cpp  integral_test.cpp  unit_test.cpp
